# eval-ds

./: .env.example  .gitignore  DATA_STRUCTURE_VERIFICATION.md  FIX_COMPLETE_SUMMARY.md  INTEGRATION_SUMMARY.md  PATCH_DEBUG_STATUS.md  PATCH_VALIDATION_RESULTS.md  README.md  README_analyzer.md  bee_search.py  download_bee_run.py  example.py  launch_analyzer.sh  prompt_patch_loader.py  pyproject.toml  run-bee  sample_analyzer.py  test_bee_search.py
bee_sample_viewer/: __init__.py  __main__.py  app.py  conversation_viewer.py  reward_explanation.py  reward_viewer.py  widgets.py
eval_ds/: __init__.py  main.py
eval_ds_tools/: __init__.py  run_bee.py
experiments/: LOCAL_MCP_SOLUTION.md  LOCAL_SETUP.md  tau2bench_ablation.toml  tau2bench_telecom.toml
experiments/configs/: common.toml  tau2bench_ablation.toml  tau2bench_telecom.toml  tau2bench_telecom_baseline.toml  tau2bench_telecom_cmd_reasoning_50.toml  tau2bench_telecom_fixed.toml  tau2bench_telecom_focused.toml  tau2bench_telecom_full_cmd_reasoning.toml
experiments/failures/: README.md  TOOL_CONFUSION_BUG.md
experiments/prompt_patches/: README.md  TOOL_CONFUSION_AGENT_VS_USER.txt
experiments/scripts/: README.md  filter-bee-output.sh  get-last-run-id.sh  manage-mcp-servers.sh  monitor_and_analyze.sh  run-bee  run-telecom-eval.sh  run_bee_with_patch.py  run_cmd_reasoning_50.sh  test_single_sample.sh
failure_analysis/: README.md
failure_analysis/cli/: axial_coder.py  open_coder.py
failure_viewer_app/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TESTING.md  failure-viewer-app-control.sh
failure_viewer_app/backend/: __init__.py  config.py  main.py  models.py  routes.py
failure_viewer_app/frontend/: index.html  (+3 more)
tests/: __init__.py  conftest.py  test_app.py  test_conversation_display_real_data.py  test_conversation_viewer.py  test_global_keybindings.py  test_integration_prompt_patches.py  test_json_formatting_in_conversation.py  test_json_in_tokens.py  test_markdown.py  test_navigation.py  test_nested_json_in_tokens.py  test_nested_markdown.py  test_new_keybindings.py  test_prompt_patch_loader.py  test_reward_explanation.py  test_reward_viewer.py  test_status_header.py  test_token_parsing.py  test_widgets.py
(+18 files in other folders)
