[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-ds"
version = "0.1.0"
description = "Tools for downloading and analyzing bee run samples with full agentic trajectories"
requires-python = ">=3.10"
dependencies = [
    "checkpoint-metadata-client>=10.0.2",
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
download-bee-run = "download_bee_run:main"
view-bee-samples = "bee_sample_viewer.__main__:main"

[tool.setuptools]
py-modules = ["download_bee_run"]
packages = ["bee_sample_viewer"]

[tool.uv]
keyring-provider = "subprocess"
package = true

[[tool.uv.index]]
name = "cohere-py"
url = "https://oauth2accesstoken@us-central1-python.pkg.dev/cohere-artifacts/cohere-py/simple"
publish-url = "https://oauth2accesstoken@us-central1-python.pkg.dev/cohere-artifacts/cohere-py"
explicit = true

[tool.uv.sources]
checkpoint-metadata-client = { index = "cohere-py" }
